config/dev/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gto-front-deployment
spec:
  selector:
    matchLabels:
      app: gto
      tier: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: gto
        tier: frontend
    spec:
      containers:
        - name: gto-front-container
          image: docker.pkg.github.com/gtoru/front/front
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "100m"
              memory: "50Mi"
            requests:
              cpu: "10m"
              memory: "5Mi"
      imagePullSecrets:
        - name: gto-regcred
---
apiVersion: v1
kind: Service
metadata:
  name: gto-front-svc
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: gto
    tier: frontend
